Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17280

LFSCK inconsistent OI fixed line spamming

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      LFSCK directory scanning founds the dir that contains a shards. Shard name is a FID, so LFSCK has FID to inode mapping from a directory entry. LFSCK put this FID/inode mapping to inconsistent list, to check this mapping using OI and scrub. And it produces msg inconsistent OI fixed.

       00100000:10000000:16.0:1692053821.905386:0:2000257:0:(osd_scrub.c:561:osd_scrub_check_update()) snx11922-MDT0001/: inconsistent OI [0x2400013a1:0x60:0x0] -> 1453140737/3095306056 fixed
      00100000:10000000:16.0:1692053821.923355:0:2000257:0:(osd_scrub.c:561:osd_scrub_check_update()) snx11922-MDT0001/: inconsistent OI [0x2400088d2:0x69:0x0] -> 476345090/2021315419 fixed
      00100000:10000000:16.0:1692053821.952611:0:2000257:0:(osd_scrub.c:561:osd_scrub_check_update()) snx11922-MDT0001/: inconsistent OI [0x2400d94a8:0x170:0x0] -> 1377156233/3344786205 fixed
      00100000:10000000:16.0:1692053822.014174:0:2000257:0:(osd_scrub.c:561:osd_scrub_check_update()) snx11922-MDT0001/: inconsistent OI [0x2400db7d0:0x1a3:0x0] -> 1443184172/1650904894 fixed
      00100000:10000000:16.0:1692053822.032313:0:2000257:0:(osd_scrub.c:561:osd_scrub_check_update()) snx11922-MDT0001/: inconsistent OI [0x2400db7d0:0x1a4:0x0] -> 1004045353/2596067949 fixed
      00100000:10000000:16.0:1692053822.066458:0:2000257:0:(osd_scrub.c:561:osd_scrub_check_update()) snx11922-MDT0001/: inconsistent OI [0x2400db7d0:0x1cd:0x0] -> 1004045365/3648998293 fixed
      

            aboyko Alexander Boyko
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: